[package]
name = "simple-ast"
version = "1.0.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "num_enum/std",
    "thiserror/std",
    "das-types-std",
    "hex/std",
    "serde_json",
]
no_std = [
    "das-types",
    "hex/alloc",
]

[dependencies]
# main
# Temporarily use from thiserror-core: https://github.com/dtolnay/thiserror/issues/196#issuecomment-1345342970
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
log = "0.4.0"
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
# macro
paste = "1.0"
num_enum = { version = "0.6", default-features = false }
strum = { version = "0.24", features = ["derive"] }
# dotbit
das-types = { path = "../das-types/rust", optional = true }
das-types-std = { path = "../das-types-std/rust", optional = true }
